more fixes to schedule draft