@@ -8,6 +8,7 @@ import dev.overwave.icebreaker.core.geospatial.VelocityIntervalMapper;
 import dev.overwave.icebreaker.core.geospatial.VelocityIntervalRepository;
 import dev.overwave.icebreaker.core.geospatial.VelocityIntervalStatic;
 import dev.overwave.icebreaker.core.graph.Graph;
+import dev.overwave.icebreaker.core.map.Mercator;
 import dev.overwave.icebreaker.core.navigation.MovementType;
 import dev.overwave.icebreaker.core.navigation.NavigationPointMapper;
 import dev.overwave.icebreaker.core.navigation.NavigationPointRepository;
@@ -25,15 +26,23 @@ import dev.overwave.icebreaker.core.route.DefaultRouteRepository;
 import dev.overwave.icebreaker.core.route.DefaultRouteStatic;
 import dev.overwave.icebreaker.core.route.Route;
 import dev.overwave.icebreaker.core.route.Router;
+import dev.overwave.icebreaker.core.schedule.ConfirmedRouteSegment.ConfirmedRouteSegmentBuilder;
 import dev.overwave.icebreaker.core.serialization.SerializationUtils;
 import dev.overwave.icebreaker.core.ship.ShipMapper;
 import dev.overwave.icebreaker.core.ship.ShipRepository;
 import dev.overwave.icebreaker.core.ship.ShipStatic;
 import jakarta.annotation.PostConstruct;
+import javax.imageio.ImageIO;
 import lombok.RequiredArgsConstructor;
+import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.awt.BasicStroke;
+import java.awt.Color;
+import java.awt.Graphics2D;
+import java.awt.image.BufferedImage;
+import java.io.File;
 import java.time.Duration;
 import java.time.Instant;
 import java.time.LocalDateTime;
@@ -45,11 +54,15 @@ import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.SequencedCollection;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import static java.util.Objects.requireNonNull;
 
 @Slf4j
 @Service
@@ -98,12 +111,11 @@ public class ScheduleService {
                 .map(il -> ScheduledShip.builder()
                         .shipId(il.getIcebreaker().getId())
                         .currentNavigationPointId(il.getStartPoint().getId())
-                        .status(ScheduleStatus.FREE)
+                        .status(ScheduleStatus.WAITING)
                         .icebreaker(true)
                         .nextNavigationPointId(il.getStartPoint().getId())
                         .finishNavigationPointId(null)
                         .actionEndEta(il.getStartDate())
-                        .convoyRequests(new ArrayList<>())
                         .build())
                 .forEach(ships::add);
 
@@ -111,12 +123,11 @@ public class ScheduleService {
                 .map(nr -> ScheduledShip.builder()
                         .shipId(nr.shipId())
                         .currentNavigationPointId(nr.startPointId())
-                        .status(ScheduleStatus.FREE)
+                        .status(ScheduleStatus.WAITING)
                         .icebreaker(false)
                         .nextNavigationPointId(nr.startPointId())
                         .finishNavigationPointId(nr.finishPointId())
                         .actionEndEta(nr.startDate())
-                        .convoyRequests(new ArrayList<>())
                         .build())
                 .forEach(ships::add);
 
@@ -126,8 +137,44 @@ public class ScheduleService {
             assignIcebreakers(ships, convoyRequests, context);
 
             now = updateTime(now, ships, context);
+            convoyRequests.clear();
+            ships.forEach(s -> s.getConvoyRequests().clear());
         }
         System.out.println(convoyRequests);
+    }
+
+    @SneakyThrows
+    private void drawConvoyRequests(List<ConvoyRequest> convoyRequests, MetaRouteContext context) {
+        if (true) return;
+        convoyRequests.sort(Comparator.comparing(cr -> cr.getRouteSegment().interval().start()));
+        for (int i = 1; i <= convoyRequests.size(); i++) {
+            BufferedImage image = ImageIO.read(requireNonNull(this.getClass().getResourceAsStream("/mercator.png")));
+            Graphics2D graphics = image.createGraphics();
+            graphics.setStroke(new BasicStroke(3));
+            graphics.setColor(Color.BLACK);
+            for (int j = 0; j < i; j++) {
+                ConvoyRequest convoyRequest = convoyRequests.get(j);
+
+                Point from = convoyRequest.getRouteSegment().from().point();
+                Point to = convoyRequest.getRouteSegment().to().point();
+
+                Entry<Double, Double> pointLeft = Mercator.pointToMercatorNormalized(from);
+                Entry<Double, Double> pointRight = Mercator.pointToMercatorNormalized(to);
+                graphics.drawLine(
+                        (int) (pointLeft.getKey() * image.getWidth()),
+                        (int) (pointLeft.getValue() * image.getHeight()),
+                        (int) (pointRight.getKey() * image.getWidth()),
+                        (int) (pointRight.getValue() * image.getHeight())
+                );
+                String date = "%s-%s".formatted(asLDT(convoyRequest.getRouteSegment().interval().start()),
+                        asLDT(convoyRequest.getRouteSegment().interval().end()));
+                graphics.drawString(date,
+                        (int) (pointLeft.getKey() * image.getWidth()),
+                        (int) (pointLeft.getValue() * image.getHeight()));
+            }
+            image = image.getSubimage(3158, 66, 3147, 3203);
+            ImageIO.write(image, "PNG", new File("raspisanie_" + i + ".png"));
+        }
     }
 
     private boolean areMovingShips(List<ScheduledShip> ships) {
@@ -135,7 +182,8 @@ public class ScheduleService {
             if (ship.isIcebreaker() && ship.getStatus() != ScheduleStatus.FREE) {
                 return true;
             }
-            if (!ship.isIcebreaker() && !Set.of(ScheduleStatus.STUCK, ScheduleStatus.ARRIVED).contains(ship.getStatus())) {
+            Set<ScheduleStatus> finishStatuses = Set.of(ScheduleStatus.STUCK, ScheduleStatus.ARRIVED);
+            if (!ship.isIcebreaker() && !finishStatuses.contains(ship.getStatus())) {
                 return true;
             }
         }
@@ -143,38 +191,134 @@ public class ScheduleService {
     }
 
     private Instant updateTime(Instant now, List<ScheduledShip> ships, MetaRouteContext context) {
-        ships.sort(Comparator.comparing(ScheduledShip::getActionEndEta));
         Instant nextTick = ships.getFirst().getActionEndEta();
+        ships.sort(Comparator.comparing(ScheduledShip::isIcebreaker).reversed()); // icebreakers first
         for (ScheduledShip ship : ships) {
-            if (nextTick.isBefore(ship.getActionEndEta())) {
-                break;
+            Set<ScheduleStatus> readyStatuses = Set.of(ScheduleStatus.READY_TO_MOVE, ScheduleStatus.READY_TO_CONVOY);
+            if (readyStatuses.contains(ship.getStatus())) {
+                processTickBefore(ship, now, context);
             }
-            processTick(ship, now, context);
+            nextTick = (ship.getActionEndEta().isAfter(now) && ship.getActionEndEta().isBefore(nextTick)) ?
+                    ship.getActionEndEta() : nextTick;
+        }
+        log.error("Fast forward to {}", nextTick);
+        for (ScheduledShip ship : ships) {
+            if (!nextTick.isBefore(ship.getActionEndEta())) {
+                processTickAfter(ship, nextTick, context);
+            }
         }
         return nextTick;
     }
 
-    private void processTick(ScheduledShip ship, Instant now, MetaRouteContext context) {
+    private void processTickBefore(ScheduledShip ship, Instant now, MetaRouteContext context) {
         switch (ship.getStatus()) {
-            case FREE -> {
+            case READY_TO_MOVE -> {
                 NavigationPointStatic from = context.points().get(ship.getCurrentNavigationPointId());
                 NavigationPointStatic to = context.points().get(ship.getNextNavigationPointId());
                 Map<Point, Node> nodes = Router.findClosestNodes(GRAPH, from.point(), to.point());
-                Duration referenceDuration = Duration.between(now, ship.getActionEndEta()).multipliedBy(2);
-                Optional<Route> route = Router.createRoute(nodes.get(from.point()), nodes.get(to.point()), now,
+                Duration referenceDuration = Duration.between(now, ship.getActionEndEta()).multipliedBy(5);
+                Optional<Route> routeO = Router.createRoute(nodes.get(from.point()), nodes.get(to.point()), now,
                         context.ships().get(ship.getShipId()), MovementType.INDEPENDENT, referenceDuration);
 
-                if (route.isPresent()) {
+                if (routeO.isPresent()) {
+                    Route route = routeO.get();
+                    ConfirmedRouteSegment confirmedRouteSegment = ConfirmedRouteSegment.builder()
+                            .from(from)
+                            .to(to)
+                            .interval(route.interval())
+                            .points(route.normalizedPoints())
+                            .convoy(false)
+                            .build();
                     ship.setStatus(ScheduleStatus.MOVING)
-                            .setActionEndEta(route.get().interval().end());
+                            .setActionEndEta(route.interval().end())
+                            .getRouteSegments().add(confirmedRouteSegment);
+                    log.error("Processing tick for {}, status {} -> {}", context.ships().get(ship.getShipId()),
+                            ScheduleStatus.READY_TO_MOVE, ScheduleStatus.MOVING);
                 } else {
                     // не смогли построить маршрут???
                     ship.setStatus(ScheduleStatus.WAITING)
                             .setActionEndEta(now.plus(1, ChronoUnit.DAYS));
+                    log.error("Processing tick for {}, status {} -> {}", context.ships().get(ship.getShipId()),
+                            ScheduleStatus.READY_TO_MOVE, ScheduleStatus.WAITING);
                 }
             }
+            case READY_TO_CONVOY -> {
+                processReadyToConvoy(ship, now, context);
+            }
             default -> {
-                System.out.println(ship);
+                throw new OutOfMemoryError();
+            }
+        }
+    }
+
+    private void processReadyToConvoy(ScheduledShip ship, Instant now, MetaRouteContext context) {
+        ScheduledShip follower = ship.getConvoyRequests().getFirst().getShip();
+        if (follower.getCurrentNavigationPointId() != ship.getCurrentNavigationPointId()) {
+            ship.setStatus(ScheduleStatus.FREE)
+                    .setActionEndEta(now);
+            return;
+        }
+        // move!
+        NavigationPointStatic from = context.points().get(follower.getCurrentNavigationPointId());
+        NavigationPointStatic to = context.points().get(follower.getNextNavigationPointId());
+        Map<Point, Node> nodes = Router.findClosestNodes(GRAPH, from.point(), to.point());
+        Duration referenceDuration = Duration.between(now, follower.getActionEndEta()).multipliedBy(5);
+        Optional<Route> routeO = Router.createRoute(nodes.get(from.point()), nodes.get(to.point()), now,
+                context.ships().get(follower.getShipId()), MovementType.FOLLOWING, referenceDuration);
+
+        if (routeO.isEmpty()) {
+            // не смогли построить маршрут???
+            log.error("Processing tick for {}, status {} -> {}", context.ships().get(follower.getShipId()),
+                    ScheduleStatus.READY_TO_CONVOY, ScheduleStatus.READY_TO_CONVOY);
+            return;
+        }
+        Route route = routeO.get();
+        ConfirmedRouteSegmentBuilder builder = ConfirmedRouteSegment.builder()
+                .from(from)
+                .to(to)
+                .interval(route.interval())
+                .points(route.normalizedPoints())
+                .convoy(true);
+
+        log.error("Processing tick for {}, status {} -> {}", context.ships().get(follower.getShipId()),
+                follower.getStatus(), ScheduleStatus.MOVING);
+        ConfirmedRouteSegment followerSegment =
+                builder.otherShips(List.of(context.ships().get(ship.getShipId()))).build();
+        follower.setStatus(ScheduleStatus.MOVING)
+                .setActionEndEta(route.interval().end())
+                .getRouteSegments().add(followerSegment);
+
+        log.error("Processing tick for {}, status {} -> {}", context.ships().get(ship.getShipId()),
+                ScheduleStatus.READY_TO_CONVOY, ScheduleStatus.MOVING);
+        ConfirmedRouteSegment icebreakerSegment =
+                builder.otherShips(List.of(context.ships().get(follower.getShipId()))).build();
+        ship.setStatus(ScheduleStatus.MOVING)
+                .setActionEndEta(route.interval().end())
+                .getRouteSegments().add(icebreakerSegment);
+    }
+
+    private void processTickAfter(ScheduledShip ship, Instant now, MetaRouteContext context) {
+        switch (ship.getStatus()) {
+            case WAITING -> {
+                ship.setStatus(ScheduleStatus.FREE);
+                if (ship.isIcebreaker()) {
+                    ship.setFinishNavigationPointId(null);
+                }
+                log.error("Processing tick for {}, status {} -> {}", context.ships().get(ship.getShipId()),
+                        ScheduleStatus.WAITING, ScheduleStatus.FREE);
+            }
+            case MOVING -> {
+                ship.setStatus(ScheduleStatus.FREE)
+                        .setCurrentNavigationPointId(ship.getNextNavigationPointId());
+                log.error("Processing tick for {}, status {} -> {}", context.ships().get(ship.getShipId()),
+                        ScheduleStatus.MOVING, ScheduleStatus.FREE);
+            }
+            case FREE -> {
+                log.warn("Ship {} AFK", context.ships().get(ship.getShipId()));
+                ship.setActionEndEta(now);
+            }
+            default -> {
+                throw new OutOfMemoryError();
             }
         }
     }
@@ -186,11 +330,10 @@ public class ScheduleService {
                 .values().stream()
                 .sorted(Comparator.comparing(cr -> cr.getRouteSegment().interval().start()))
                 .toList();
-        List<ScheduledShip> icebreakers =
-                ships.stream().filter(ScheduledShip::isIcebreaker).collect(Collectors.toList());
+        List<ScheduledShip> icebreakers = ships.stream().filter(ScheduledShip::isIcebreaker).toList();
 
         for (ConvoyRequest convoyRequest : closestConvoyRequests) {
-            if (icebreakers.isEmpty()) {
+            if (icebreakers.stream().allMatch(i -> i.getStatus() != ScheduleStatus.FREE)) {
                 break;
             }
             NavigationPointStatic target = convoyRequest.getRouteSegment().from();
@@ -198,31 +341,12 @@ public class ScheduleService {
             Instant fastestArrival = Instant.MAX;
             ScheduledShip fastestIcebreaker = null;
             for (ScheduledShip icebreaker : icebreakers) {
-                long finishPointId = icebreaker.getFinishNavigationPointId() == null ?
-                        icebreaker.getCurrentNavigationPointId() : icebreaker.getFinishNavigationPointId();
-                ScheduledShip virtualIcebreaker = ScheduledShip.builder()
-                        .shipId(icebreaker.getShipId())
-                        .currentNavigationPointId(icebreaker.getNextNavigationPointId())
-                        .status(ScheduleStatus.FREE)
-                        .icebreaker(true)
-                        .finishNavigationPointId(finishPointId)
-                        .actionEndEta(icebreaker.getActionEndEta())
-                        .build();
-                Duration etaToFinish = estimateEtaToFinish(context, virtualIcebreaker);
+                Instant etaToFinish = getEtaToFinishCurrent(context, icebreaker, target);
                 if (etaToFinish == null) {
                     continue;
                 }
-                virtualIcebreaker
-                        .setCurrentNavigationPointId(finishPointId)
-                        .setFinishNavigationPointId(target.id())
-                        .setActionEndEta(icebreaker.getActionEndEta().plus(etaToFinish));
-                Duration etaToFinishSecond = estimateEtaToFinish(context, virtualIcebreaker);
-                if (etaToFinishSecond == null) {
-                    continue;
-                }
-                Instant etaInstant = icebreaker.getActionEndEta().plus(etaToFinish).plus(etaToFinishSecond);
-                if (fastestArrival.isAfter(etaInstant)) {
-                    fastestArrival = etaInstant;
+                if (fastestArrival.isAfter(etaToFinish)) {
+                    fastestArrival = etaToFinish;
                     fastestIcebreaker = icebreaker;
                 }
             }
@@ -230,18 +354,62 @@ public class ScheduleService {
                 log.info("No icebreakers available, skipped");
                 continue;
             }
-            icebreakers.remove(fastestIcebreaker);
             if (fastestIcebreaker.getStatus() != ScheduleStatus.FREE) {
-                log.info("Fastest icebreaker is busy, not assigned");
+//                log.info("Fastest icebreaker is busy, not assigned");
                 continue;
             }
-            fastestIcebreaker.setFinishNavigationPointId(convoyRequest.getRouteSegment().to().id());
+            fastestIcebreaker.setFinishNavigationPointId(convoyRequest.getRouteSegment().from().id());
             List<RoutePredictionSegment> route = predictRoute(fastestIcebreaker, context);
+            Objects.requireNonNull(route);
+            if (route.isEmpty()) {
+                fastestIcebreaker.setStatus(ScheduleStatus.READY_TO_CONVOY)
+                        .setNextNavigationPointId(fastestIcebreaker.getCurrentNavigationPointId())
+                        // Ждём кораблик
+                        .setActionEndEta(convoyRequest.getRouteSegment().interval().start());
+            } else {
+                RoutePredictionSegment routeFirst = route.getFirst();
+                fastestIcebreaker.setStatus(ScheduleStatus.READY_TO_MOVE)
+                        .setNextNavigationPointId(routeFirst.to().id())
+                        .setActionEndEta(routeFirst.interval().end());
+            }
+
             convoyRequest.setIcebreaker(fastestIcebreaker);
             fastestIcebreaker.getConvoyRequests().add(convoyRequest);
             log.info("Icebreaker {} assigned to request {}", context.ships().get(fastestIcebreaker.getShipId()),
                     convoyRequest);
         }
+    }
+
+    private Instant getEtaToFinishCurrent(MetaRouteContext context, ScheduledShip icebreaker,
+                                          NavigationPointStatic target) {
+        long currentPointId = icebreaker.getStatus() == ScheduleStatus.MOVING ? // другие способы езды?
+                icebreaker.getNextNavigationPointId() :
+                icebreaker.getCurrentNavigationPointId();
+        long finishPointId = Stream.of(icebreaker.getFinishNavigationPointId(),
+                        icebreaker.getNextNavigationPointId(), icebreaker.getCurrentNavigationPointId())
+                .filter(Objects::nonNull)
+                .findFirst()
+                .orElseThrow();
+        ScheduledShip virtualIcebreaker = ScheduledShip.builder()
+                .shipId(icebreaker.getShipId())
+                .currentNavigationPointId(currentPointId)
+                .status(ScheduleStatus.FREE)
+                .icebreaker(true)
+                .finishNavigationPointId(finishPointId)
+                .actionEndEta(icebreaker.getActionEndEta())
+                .build();
+        Duration eta = estimateEtaToFinish(context, virtualIcebreaker);
+        if (eta == null) {
+            return null;
+        }
+        virtualIcebreaker.setCurrentNavigationPointId(finishPointId)
+                .setFinishNavigationPointId(target.id())
+                .setActionEndEta(icebreaker.getActionEndEta().plus(eta));
+        Duration etaAfter = estimateEtaToFinish(context, virtualIcebreaker);
+        if (etaAfter == null) {
+            return null;
+        }
+        return icebreaker.getActionEndEta().plus(eta).plus(etaAfter);
     }
 
     private Duration estimateEtaToFinish(MetaRouteContext context, ScheduledShip virtualIcebreaker) {
@@ -287,11 +455,12 @@ public class ScheduleService {
     private void predictFullRoutes(List<ScheduledShip> ships, List<ConvoyRequest> convoyRequests,
                                    MetaRouteContext context) {
         List<ScheduledShip> freeShips = ships.stream()
-                .filter(s -> s.getStatus() == ScheduleStatus.FREE && !s.isIcebreaker())
+                .filter(s -> Set.of(ScheduleStatus.FREE, ScheduleStatus.WAITING).contains(s.getStatus()))
+                .filter(s -> !s.isIcebreaker())
                 .toList();
         for (ScheduledShip freeShip : freeShips) {
-            log.info("_____________________________________________________");
-            log.info("Predicting route for " + context.ships().get(freeShip.getShipId()).name());
+//            log.info("_____________________________________________________");
+//            log.info("Predicting route for " + context.ships().get(freeShip.getShipId()).name());
             List<RoutePredictionSegment> prediction = predictRoute(freeShip, context);
             if (prediction == null) {
                 log.info("Ship {} is stuck", context.ships().get(freeShip.getShipId()).name());
@@ -300,13 +469,16 @@ public class ScheduleService {
                 continue;
             }
             for (RoutePredictionSegment segment : prediction) {
-                log.info("From {} to {}, [{} -> {}]", segment.from().name(), segment.to().name(),
-                        asLDT(segment.interval().start()), asLDT(segment.interval().end()));
+//                log.info("From {} to {}, [{} -> {}]", segment.from().name(), segment.to().name(),
+//                        asLDT(segment.interval().start()), asLDT(segment.interval().end()));
             }
             RoutePredictionSegment firstPoint = prediction.getFirst();
-            freeShip.setStatus(firstPoint.convoy() ? ScheduleStatus.WAITING_CONVOY : ScheduleStatus.WAITING);
-            freeShip.setNextNavigationPointId(firstPoint.to().id());
-            freeShip.setActionEndEta(firstPoint.interval().instant());
+            freeShip//.setStatus(firstPoint.convoy() ? ScheduleStatus.WAITING : ScheduleStatus.READY_TO_MOVE)
+                    .setNextNavigationPointId(firstPoint.to().id())
+            ;//                    .setActionEndEta(firstPoint.interval().instant());
+            if (freeShip.getStatus() == ScheduleStatus.FREE) {
+                freeShip.setStatus(ScheduleStatus.READY_TO_MOVE);
+            }
 
             for (RoutePredictionSegment route : prediction) {
                 if (route.convoy()) {
@@ -323,9 +495,9 @@ public class ScheduleService {
     }
 
     private List<RoutePredictionSegment> predictRoute(ScheduledShip scheduledShip, MetaRouteContext context) {
-        if (scheduledShip.getStatus() != ScheduleStatus.FREE) {
-            throw new IllegalStateException();
-        }
+//        if (scheduledShip.getStatus() != ScheduleStatus.FREE) {
+//            throw new IllegalStateException();
+//        }
         ShipStatic ship = context.ships().get(scheduledShip.getShipId());
         NavigationPointStatic from = context.points().get(scheduledShip.getCurrentNavigationPointId());
         NavigationPointStatic to = context.points().get(scheduledShip.getFinishNavigationPointId());
